Añade POST endpoint para los permisos
