# routes/api.php
@@ -5,7 +5,7 @@ use App\Http\Controllers\RoleController;
 use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
-Route::middleware('auth:sanctum')->group(function () {
+//Route::middleware('auth:sanctum')->group(function () {
 
     Route::prefix('/auth')->group(function () {
         // User routes
@@ -26,9 +26,10 @@ Route::middleware('auth:sanctum')->group(function () {
     
         // Permission routes
         Route::get('/permissions', [PermissionController::class, 'index']);
+    Route::post('/permissions', [PermissionController::class, 'store']);
         Route::get('/permissions/{id}', [PermissionController::class, 'show']);
         Route::put('/permissions/{id}', [PermissionController::class, 'update']);
         Route::delete('/permissions/{id}', [PermissionController::class, 'destroy']);
         Route::get('/permissions/dropdown', [PermissionController::class, 'dropdown']);
     });
-});
+//});
